[package]
name = "derezzed"
version = "0.0.1-alpha.0"
edition = "2021"
authors = ["ExpressGradient"]
license = "MIT"
description = "A Machine Learning Library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"